name:                dwarf-tools
version:             0.1.0.0
synopsis:            Tools for working with the DWARF debugging format.
description:         This library provides tools for working with the
                     information stored in the DWARF sections of an object file.
license:             ISC
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DWARF.Basics,
                       DWARF.DIE,

                       DWARF.Section.String,
                       DWARF.Section.Abbrev,
                       DWARF.Section.ARanges,
                       DWARF.Section.Info,
                       DWARF.Section.Line,

                       DWARF.DW.ATE,
                       DWARF.DW.FORM,
                       DWARF.DW.TAG,
                       DWARF.DW.AT,
                       DWARF.DW.DS,
                       DWARF.DW.LANG,
                       DWARF.DW.LNS,
                       DWARF.DW.INL,

                       DWARF.Addr2Line

  other-modules:       DWARF.Utils

  hs-source-dirs:      src
  build-depends:
    base       >=4.8  && <4.11,
    containers >=0.5  && <0.6,
    cereal     >=0.5  && <0.6,
    bytestring >=0.10 && <0.11

  default-language:    Haskell2010

executable findAddr
  main-is:          Test.hs
  build-depends:    base, dwarf-tools, bytestring,cereal,elf, containers,
                    pretty-show,
                    pretty-hex
  default-language: Haskell2010


