name:                gwarf
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DW.Basics,
                       DW.Sections,
                       DW.DIE

                       DW.ATE,
                       DW.FORM,
                       DW.TAG,
                       DW.AT,
                       DW.DS,
                       DW.LANG,
                       DW.LNS,

                       DW.Section.String,
                       DW.Section.Abbrev,
                       DW.Section.ARanges,
                       DW.Section.Info,
                       DW.Section.Line

  hs-source-dirs:      src
  build-depends:
    base       >=4.9  && <4.10,
    containers >=0.5  && <0.6,
    cereal     >=0.5  && <0.6,
    bytestring >=0.10 && <0.11

  default-language:    Haskell2010

executable findAddr
  main-is:          Test.hs
  build-depends:    base, gwarf, bytestring,cereal,elf, containers, pretty-show,
                    pretty-hex
  default-language: Haskell2010


